2010-11-12  Joern Rennecke  <amylaar@spamcop.net>

	PR target/46438
	* config/xtensa/xtensa.c (xtensa_expand_nonlocal_goto): Use LCT_NORMAL.
	(xtensa_setup_frame_addresses, xtensa_trampoline_init): Likewise.
	(xtensa_function_arg_1): De-constify cum.
	(xtensa_expand_prologue): Use add_reg_note.

2010-11-12  Eric Botcazou  <ebotcazou@adacore.com>

	* function.c (expand_function_end): Set the locator of the prologue on
	the stack checking insns.

2010-11-12  Richard Henderson  <rth@redhat.com>

	* config.gcc [xtensa] (extra_options): Add fused-madd.opt.
	* config/xtensa/xtensa.opt (mfused-madd): Remove.
	* config/xtensa/xtensa.c (TARGET_DEFAULT_TARGET_FLAGS): Remove
	MASK_FUSED_MADD.
	* config/xtensa/xtensa.md (fmasf4): Rename from muladdsf3; use fma.
	(fnmasf4): Rename from mulsubsf3; use fma.

2010-11-12  Joern Rennecke  <amylaar@spamcop.net>
	    Richard Henderson  <rth@redhat.com>

	PR target/46428
	* config/moxie/moxie.c (moxie_expand_prologue): Remove unused variables.
	* config/moxie/moxie.h (HARD_REGNO_OK_FOR_BASE_P): Use unsigned
	comparison.

2010-11-12  Pat Haugen  <pthaugen@us.ibm.com>

	* opts-common.c (decode_cmdline_option): Initialize separate_args.

2010-11-12  Jan Hubicka  <jh@suse.cz>

	* doc/invoke.texi (early-inlining-insns): Update default.
	* params.def (early-inlining-insns): Default to 10.

2010-11-12  Olivier Hainque  <hainque@adacore.com>

	* config/rs6000/aix.h: #undef TARGET_AIX_OS before #define.

2010-11-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h [!IRIX_USING_GNU_LD]
	(SUPPORTS_INIT_PRIORITY): Define.

2010-11-12  Joern Rennecke  <amylaar@spamcop.net>

	PR target/46430
	* config/avr/avr-protos.h (avr_return_addr_rtx): Update prototype.
	* config/avr/driver-avr.c (avr_device_to_arch): Always return value.
	(avr_device_to_data_start, avr_device_to_startfiles): Likewise.
	(avr_device_to_devicelib): Likewise.
	* config/avr/avr.md (zero_extendqihi2): Put variable declarations
	into block.